Updated ScreenshotViewer to 1.21 (also changed loom and gradle version to be compatible with java 21) Removed background in config menu